fix spacing in background

--- a/src/components/background/SkillMapper.css
+++ b/src/components/background/SkillMapper.css
@@ -8,3 +8,9 @@
     padding-right:.4rem;
   }
 }
+.skillContainer{
+  margin-bottom:1rem;
+  @media (min-width: 720px){
+    margin:1rem;
+  }
+}
